sonar 경고 해결